<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/baseline_insert_link_24"
            tools:ignore="InefficientWeight"
            android:contentDescription="@string/kalimat">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="@dimen/ukuran"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tautan"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:text="@string/bagikantautan"
            android:textSize="13sp"
            android:paddingTop="5dp"
            android:textColor="#515151"
            android:paddingBottom="30dp">
        </TextView>
    </LinearLayout>

</FrameLayout>